# Traffic-Congestion-Detection

./: .deepsource.toml  .gitignore  README.md  predict.py  pyproject.toml  requirements.txt
AutogluonModels/ag-20241121_063947/: learner.pkl
AutogluonModels/ag-20241121_063947/logs/: predictor_log.txt
AutogluonModels/ag-20241121_063947/models/: trainer.pkl
notebook/: traffic_info.md
res/configs/: config_103_0.yaml  config_103_1.yaml  config_105_0.yaml  config_105_1.yaml  config_105_2.yaml  config_107_0.yaml  config_107_1.yaml  config_108_0.yaml  config_108_1.yaml
res/results/: 103_0.json
src/: cmd_line.py
src/models/: common.py  experimental.py  tf.py  yolo.py
src/results/: 105_0.json  combined_data.csv  id_label_105_0.csv  labeled_congestion_data_final.csv  poi.csv
src/results/100/: all_models_evaluation.csv  best_score.txt  evaluation_results.json  leaderboard.csv  level_classify_all_models_evaluation.csv  level_classify_leaderboard.csv  level_classify_model_metrics.csv  predictions.csv
src/results/103/: all_models_evaluation.csv  evaluation_results.csv  evaluation_results.json  leaderboard.csv  level_classify_all_models_evaluation.csv  level_classify_leaderboard.csv  predictions.csv
src/results/105/: all_models_evaluation.csv  leaderboard.csv  predictions.csv
src/results/107/: all_models_evaluation.csv  leaderboard.csv  (+1 more)
src/traffic/: my_path.py
src/utils/: __init__.py  activations.py  augmentations.py  autoanchor.py  autobatch.py  benchmarks.py  datasets.py  downloads.py  general.py  loss.py  metrics.py  plots.py  torch_utils.py
(+233 files in other folders)
