[tool.poetry]
name = "traffic-congestion-detection"
version = "0.1.0"
description = ""
authors = ["Wang Haowei <hw_wang@whu.edu.cn>"]
readme = "README.md"
packages = [{include = "traffic", from = "src"}]

[tool.poetry.dependencies]
python = "3.8.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
detect = "cmd_line:detect"
draw = "cmd_line:draw"
calculate = "cmd_line:calculate"
predict = "cmd_line:predict"

[tool.ruff]
line-length = 79
